Fixed website for landscape view on mobile

--- a/includes/sass/home.sass
+++ b/includes/sass/home.sass
@@ -40,9 +40,3 @@
       @media (max-width: 1000px)
         span
           font-size: 40px
-
-  #social-header
-    position: absolute
-    bottom: 0
-    height: 120px
-    width: 100%
