--- a/includes/sass/social.sass
+++ b/includes/sass/social.sass
@@ -12,14 +12,11 @@
     width: 400px
     height: 400px
 
-  @media (max-width: 1000px)
-    iframe
-      width: 600px
-      height: 600px
-      margin: 20px 0
+@media (max-width: 1000px)
+  #social
+    padding-bottom: 120px
 
-  #about-header
-    position: relative
-    align-self: flex-end
-    width: 100%
-    height: 120px
+    iframe
+      width: 500px
+      height: 500px
+      margin: 20px 0
