--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -12,12 +12,15 @@ section
     flex: 1 100%
     font-size: 35px
     text-align: center
-    margin-top: 80px
-    padding-bottom: 10px
 
   @media (max-width: 1000px)
     h1
       font-size: 45px
+      margin-top: 80px
+
+@media (max-width: 1000px)
+  section
+    height: auto
 
 @import includes/sass/vars
 @import includes/sass/header
